// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <audio
    src="fifteen minutes to go.ogg"
    title="announcer"
  />
  <span
    role="timer"
  >
    11h00m00s
  </span>
</DocumentFragment>
`;

exports[`when a second passes matches snapshot 1`] = `
<DocumentFragment>
  <audio
    src="fifteen minutes to go.ogg"
    title="announcer"
  />
  <span
    role="timer"
  >
    10h59m59s
  </span>
</DocumentFragment>
`;

exports[`when a short time passes matches snapshot 1`] = `
<DocumentFragment>
  <audio
    src="fifteen minutes to go.ogg"
    title="announcer"
  />
  <span
    role="timer"
  >
    11h00m00s
  </span>
</DocumentFragment>
`;
